Completion of seller form registration, admin action on the form submission and seller product uploading succesful